testing out replay code

--- a/notebooks/scratch.ipynb
+++ b/notebooks/scratch.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "homeless-panama",
+   "id": "thermal-programming",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "verified-soviet",
+   "id": "popular-bankruptcy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "oriental-laugh",
+   "id": "communist-florence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 322,
-   "id": "caroline-leadership",
+   "id": "bizarre-diamond",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 323,
-   "id": "commercial-heath",
+   "id": "convertible-workplace",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "defined-destination",
+   "id": "applicable-catalyst",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "monetary-client",
+   "id": "frequent-carolina",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 324,
-   "id": "reverse-anime",
+   "id": "elegant-burke",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "gross-level",
+   "id": "authentic-object",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 325,
-   "id": "gothic-yesterday",
+   "id": "hearing-compound",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 326,
-   "id": "monetary-march",
+   "id": "dominican-peripheral",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 327,
-   "id": "modular-navigation",
+   "id": "serious-motorcycle",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 328,
-   "id": "human-vietnam",
+   "id": "martial-tutorial",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 329,
-   "id": "comprehensive-dealer",
+   "id": "laden-luther",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "southwest-booth",
+   "id": "monetary-baking",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "anticipated-nebraska",
+   "id": "viral-zealand",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "tough-proposition",
+   "id": "affecting-diesel",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "racial-coordination",
+   "id": "found-stations",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 330,
-   "id": "sized-assurance",
+   "id": "defined-stadium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 331,
-   "id": "figured-secret",
+   "id": "chicken-northwest",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 332,
-   "id": "competent-crowd",
+   "id": "congressional-retail",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 333,
-   "id": "religious-banner",
+   "id": "decent-compilation",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "focused-marshall",
+   "id": "nutritional-birmingham",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "elegant-valve",
+   "id": "valid-johnston",
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "insured-republic",
+   "id": "utility-lodge",
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "objective-search",
+   "id": "outside-humanitarian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "modular-vaccine",
+   "id": "foreign-drawing",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "failing-termination",
+   "id": "liked-helen",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "tamil-acrylic",
+   "id": "greater-courage",
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "interior-reliance",
+   "id": "searching-classroom",
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "numerical-spotlight",
+   "id": "imposed-running",
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "proper-annex",
+   "id": "eastern-fairy",
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "authorized-trademark",
+   "id": "amber-pharmacy",
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "small-candle",
+   "id": "exciting-clark",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "private-audience",
+   "id": "structured-snapshot",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "dominant-participant",
+   "id": "lucky-darwin",
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "dependent-ribbon",
+   "id": "seventh-greeting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1327,7 +1327,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "experienced-cuisine",
+   "id": "marked-description",
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "union-thailand",
+   "id": "dietary-edward",
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1393,7 @@
   {
    "cell_type": "code",
    "execution_count": 256,
-   "id": "ongoing-hungarian",
+   "id": "swiss-cooler",
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vertical-phase",
+   "id": "finnish-bidding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,7 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": 306,
-   "id": "explicit-fantasy",
+   "id": "arabic-leisure",
    "metadata": {},
    "outputs": [
     {
@@ -1453,7 +1453,7 @@
   {
    "cell_type": "code",
    "execution_count": 319,
-   "id": "lovely-lobby",
+   "id": "immediate-designation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1465,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": 321,
-   "id": "fifth-publication",
+   "id": "incoming-mouth",
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spare-rental",
+   "id": "assumed-klein",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intelligent-cream",
+   "id": "requested-panama",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1500,18 +1500,18 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "broke-forest",
+   "id": "known-forty",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_pvalue(obs,null):\n",
-    "    return (sum(abs(null) >= abs(obs)) + 1) / (len(null) + 1);"
+    "    return (sum(abs(null) >= abs(obs)) + 1) / (len(null) + 1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "hearing-independence",
+   "id": "frozen-clark",
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1533,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "handled-alarm",
+   "id": "reduced-retrieval",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "hourly-width",
+   "id": "bronze-fairy",
    "metadata": {},
    "outputs": [
     {
@@ -1574,7 +1574,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "increased-uzbekistan",
+   "id": "deluxe-grade",
    "metadata": {},
    "outputs": [
     {
@@ -1609,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "specified-participation",
+   "id": "substantial-powder",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1617,7 +1617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "center-interview",
+   "id": "operational-enemy",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1625,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "gross-stranger",
+   "id": "precious-distance",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "social-inspector",
+   "id": "soviet-invasion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1644,7 +1644,7 @@
   {
    "cell_type": "code",
    "execution_count": 308,
-   "id": "possible-neutral",
+   "id": "gothic-frederick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1656,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": 309,
-   "id": "corrected-poker",
+   "id": "comic-encyclopedia",
    "metadata": {},
    "outputs": [
     {
@@ -1698,7 +1698,7 @@
   {
    "cell_type": "code",
    "execution_count": 287,
-   "id": "utility-concentration",
+   "id": "subjective-season",
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "id": "strong-lucas",
+   "id": "convertible-politics",
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1765,7 @@
   {
    "cell_type": "code",
    "execution_count": 269,
-   "id": "boring-forest",
+   "id": "behavioral-dover",
    "metadata": {},
    "outputs": [
     {
@@ -1795,6 +1795,29 @@
     "    ax.set_ylabel('y position')\n",
     "    npl.utils.clear_right(ax)\n",
     "    npl.utils.clear_top(ax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "vocal-ghana",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8100000000.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(81000000/30000)/60\n",
+    "\n",
+    "# 81000000/0.01"
    ]
   }
  ],
